# Curriculum-Forge

./: .dockerignore  .gitignore  AGENT_WORK_RULES.md  AUTORESEARCH_INTEGRATION.md  AUTORESEARCH_REFLECT.md  BENCHMARK_GUIDE.md  COMPLETION_SUMMARY.md  Dockerfile  ENHANCEMENTS_PROGRESS.md  GITHUB_UPLOAD_GUIDE.md  GSTACK_REPORT.md  LICENSE  PROJECT_COMPLETION.md  PROJECT_NAMES.md  README.md  README_CN.md  SPEC.md  TOOLRL_INTEGRATION.md  TRAINING_GUIDE.md  __init__.py  acp-spec.md  benchmark.py  channel-job-bridge-spec.md  cli.py  compare.py  coordinator-async-spec.md  docker-compose.yml  gateway-spec.md  main.py  multi-agent-plan.md  multi-agent-spec.md  provider-execution-plan.md  provider-execution-spec.md  pyproject.toml  pytest.ini  requirements.txt  sse-ui-spec.md  weixin-spec.md  workspace-isolation-spec.md
acp/: __init__.py  protocol.py
agent_a/: __init__.py  analyst.py  generator.py  program.md
agent_b/: __init__.py  learner.py  program.md  reflector.py
audit/: __init__.py  logger.py
auth/: __init__.py  api_key.py  jwt.py  rbac.py  sanitizer.py  store.py  user_store.py
channels/: __init__.py  bridge.py  feishu.py  weixin.py
distributed/: __init__.py
docs/: ACP_GUIDE_CN.md  API_CN.md  BACKUP_RECOVERY_CN.md  CHANNEL_INTEGRATION_CN.md  CONFIG_GUIDE_CN.md  DEPLOYMENT_CN.md  EXAMPLES_CN.md  GATEWAY_API_CN.md  PLUGIN_GUIDE_CN.md  QUICKSTART_CN.md  SECURITY_GUIDE_CN.md  TENANT_DISTRIBUTED_CN.md  WEB_UI_CN.md
examples/: producer_reviewer_demo.py
forge/: __init__.py
governance/: __init__.py  audit.py  front_desk.py  keeper.py  mayor.py  metrics.py
(+227 files in other folders)
