[project]
name = "dual-agent-tool-rl"
version = "0.1.0"
description = "Dual-Agent ToolRL System"
# Project targets Python 3.7 compatibility
# CI tests 3.9+ because GitHub Actions deprecated Python 3.7 support
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
